[package]
name = "artimate"
version = "0.1.0"
edition = "2021"

[dependencies]
delegate = "0.13.3"
dirs = "6.0"
num-complex = "0.4.6"
pixels = "0.15.0"
png = "0.17.16"
winit = {version = "0.30.11", features = ["rwh_05"]}

[dev-dependencies]
tiny-skia = "0.11.4"
wassily = { git = "https://github.com/jeffreyrosenbluth/wassily" }
noise = "0.9.0"
num-complex = "0.4.6"
